--- a/fasmwr/src/App.css
+++ b/fasmwr/src/App.css
@@ -1,38 +1,12 @@
-.App {
-  text-align: center;
+.hv-logo {
+  height: 5em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Nav-Bar */
+.nav-bar-font {
+  font-size:24pt;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Main template */
+.main-container {
 }
