basic form implementation, next step is to connect to backend (?) and to establish the user

--- a/fasmwr/src/App.css
+++ b/fasmwr/src/App.css
@@ -9,6 +9,7 @@
 
 /* Main template */
 .main-container {
+  height:100%;
 }
 
 /* Card template */
@@ -18,4 +19,14 @@
 .aid-card:hover {
   transform: scale(1.05);
   cursor: pointer;
+}
+
+.overlay-container {
+  background-color: rgba(0,0,0,0.75);
+  display:block;
+  position: absolute;
+  z-index:10;
+  height:100%;
+  left:0;
+  right:0;
 }
