got request aid button and form to work to send info to server, next step is to create mutual aid profiles

--- a/fasmwr/src/App.css
+++ b/fasmwr/src/App.css
@@ -1,4 +1,7 @@
 /* Nav-Bar */
+.nav-bar {
+  height:2em;
+}
 .nav-logo {
  font-size:32pt;
  color:white;
@@ -9,6 +12,14 @@
 
 /* Main template */
 .main-container {
+  height:100%;
+}
+
+.App {
+  height:100%;
+}
+
+html, body {
   height:100%;
 }
 
