--- a/fasmwr/src/App.css
+++ b/fasmwr/src/App.css
@@ -21,6 +21,12 @@
   background-color:#444444;
 }
 
+.account-container-venmo {
+  min-width:20%;
+  min-height: 60%;
+  background-color:#5f5f5f;
+}
+
 .App {
   height:100%;
 }
